<resources>
    <string name="app_name">Vehicle Refueling</string>
    <string name="selecione_veiculo">"Vehicle: "</string>
    <string name="nome_posto">"Gas station: "</string>
    <string name="data_abastecimento">"Date: "</string>
    <string name="km_atual">"Current Mileagel: "</string>
    <string name="combustivel">"Fuel Type: "</string>
    <string name="opcao_gasolina">Gasoline</string>
    <string name="opcao_etanol">Flex Fuel</string>
    <string name="valor_total_pago">"Total Amount Paid:  "</string>
    <string name="hint_data_abastecimento">Refueling date.</string>
    <string name="hint_km_atual">Current mileage.</string>
    <string name="hint_valor_pago">Amount Paid.</string>
    <string name="cadastrar_abastecimento">Register Car Refueling</string>
    <string name="limpar_campos">Clear Fields</string>
    <string name="litros">"Gallons Refilled: "</string>
    <string name="quantidade_litros">"Quantity in Gallons: "</string>
    <string name="posto_petrobras">Petrobras gas station</string>
    <string name="posto_ipiranga">Ipiranga Gas Station</string>
    <string name="posto_ale">Ale Gas Station</string>
    <string name="posto_shell">Shell Gas station</string>
    <string name="posto_texaco">Texaco gas station</string>
    <string name="calibrado_pneus">"Calibrated Tires: "</string>
    <string name="Gol">VW Gol</string>
    <string name="Uno">Fiat Uno</string>
    <string name="os_campos_foram_limpos">The fields have been cleared!</string>
    <string name="penus_calibrados">Inflated tires</string>
    <string name="pneus_nao_calibrados">Underinflated tires</string>
    <string name="selecione_o_combustivel">Select the fuel!</string>
    <string name="preencha_data_do_abastecimento">Please fill in the date of fuel purchase!</string>
    <string name="km_atual_invalida">Current mileage is invalid!</string>
    <string name="qtd_litros_invalida">" Invalid gallon quantity!"</string>
    <string name="abastecimento_realizado_em">" Fuel supply carried out in \""</string>
    <string name="foi_clicado">\"\nfoi clicado!</string>
    <string name="logo_da_utfpr">UTFPR logo</string>
    <string name="descricao_do_aplicativo">Vehicle Fueling Control Application</string>
    <string name="autoria_app">Author: <u><a href="https://www.linkedin.com/in/pedrolopes1208">Pedro Cristovão Lopes Fogaça</a></u></string>
    <string name="autoria_email"><u>pedrofogaca@alunos.utfpr.edu.br</u></string>
    <string name="autoria_curso">" Specialization in Java Technology"</string>
    <string name="sobre">About</string>
    <string name="controle_dos_abastecimentos">Vehicle Fueling Control</string>
    <string name="adicionar">To add</string>
    <string name="o_spinner_veiculo_nao_possui_valores">The Spinner vehicle has no content!</string>
    <string name="o_spinner_posto_nao_possui_valores">The Spinner Gas Station has no content!</string>
    <string name="valor_pago_invalido">Invalid amount paid!</string>
    <string name="novo_abastecimento">New vehicle refueling</string>
    <string name="site_utfpr">www.utfpr.edu.br</string>
    <string name="nao_encontrado_app_para_abrir_site">No applications to open web pages were found!</string>
    <string name="nenhum_aplicativo_para_enviar_o_email">No app to send the email.</string>
    <string name="contato_pelo_aplicativo_controle_de_abastecimentos">Contact via the Supply Control App</string>
    <string name="salvar">Save</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="editar_abastecimento">Edit Vehicle Refueling</string>
    <string name="Sugerir_combustível">Suggest fuel type</string>
    <string name="sugerir_veiculo">Suggest vehicle</string>
    <string name="sugerir_posto">Suggest a Gas Station</string>
    <string name="ordenacao">Ordering</string>
    <string name="restaurar_padroes">Restore Defaults</string>
    <string name="as_configuraces_voltaram_para_os_padroes_de_instalacao">Settings restored to default!</string>
    <string name="nome_utpr_por_extenso">FEDERAL UNIVERSITY OF TECHNOLOGY - PARANÁ</string>
</resources>